k8s/space-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: space
  labels:
    name: space
